--- a/src/register_doctor.html
+++ b/src/register_doctor.html
@@ -14,12 +14,10 @@
         <input type="text" id="specialty" name="specialty" required><br><br>
         <button type="submit">Register</button>
     </form>
-    <a href="">Display</a>
+    <a href="list_doctors.html">Display</a>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/web3.min.js"></script>
     <script src="js/truffle-contract.js"></script>
     <script src="js/app.js"></script>
 </body>
