--- a/src/register_doctor.html
+++ b/src/register_doctor.html
@@ -20,5 +20,35 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/truffle-contract.js"></script>
     <script src="js/app.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#doctorForm').submit(async function(event) {
+                event.preventDefault(); // Prevent default form submission behavior
+
+                // Retrieve form data
+                var _name = $("#name").val();
+                var _specialty = $("#specialty").val();
+                try {
+                    // Make AJAX request to store doctor in the database
+                    const response = await $.ajax({
+                        type: "POST",
+                        url: "http://localhost:8000/api/doctors",
+                        data: {
+                            name: _name,
+                            specialty: _specialty
+                        }
+                    });
+
+                    // Handle success response
+                    console.log("Doctor stored in the database successfully:", response);
+                    alert("Doctor registered and stored in the database successfully!");
+                } catch (error) {
+                    // Handle error response
+                    console.error("Failed to store doctor in the database:", error);
+                    alert("Failed to store doctor in the database" + name);
+                }
+            });
+        });
+    </script>
 </body>
 </html>
