--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,38 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Election Results</title>
-
+    <title>DateMD</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="./css/index_styles.css" rel="stylesheet"/>
+    <link href="./css/styles.css" rel="stylesheet"/>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container" style="width: 650px;">
+    <main>
+      <div class="header">
+          <div class="header-left header-section">
+              <div class="title">
+                  DateMD
+              </div>
+          </div>
+          <div class="header-right header-section">
+              <a class="underline-hover nav-right">Home</a>
+              <a href="./doctors_register.html" class="underline-hover nav-right">Register</a>
+              <a class="underline-hover nav-right">About</a>
+              <a class="underline-hover nav-right">Schedule</a>
+          </div>
+      </div>
+
+      <div class="center">
+          <div class="center-text">Schedule an Appointment</div>
+          <div class="center-buttons">
+              <a href="#" class="center-btn">Patient Portal</a>
+              <a href="#" class="center-btn">Schedule Appointment</a>
+          </div>
+      </div>
+    </main>
+    <!-- <div class="container" style="width: 650px;">
       <div class="row">
         <div class="col-lg-12">
           <h1 class="text-center">Election Results</h1>
@@ -56,7 +81,7 @@
           // Redirect to the doctor registration HTML page
           window.location.href = "register_doctor.html";
       }
-    </script>
+    </script> -->
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
