--- a/src/doctors_list.html
+++ b/src/doctors_list.html
@@ -9,8 +9,8 @@
     <h1>Registered Doctors</h1>
     <div id="doctorsList"></div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/truffle-contract.js"></script>
     <script src="js/app.js"></script>
