--- a/src/doctors_register.html
+++ b/src/doctors_register.html
@@ -18,6 +18,8 @@
                     <input type="text" id="name" name="name" required><br><br>
                     <label for="specialty">Specialty:</label>
                     <input type="text" id="specialty" name="specialty" required><br><br>
+                    <label for="wallet_address">Wallet Address:</label>
+                    <input type="text" id="wallet_address" name="wallet_address" required><br><br>
                     <button type="submit">Register</button>
                 </form>
             </div>
