working on doctor slot addition

--- a/src/doctor_schedule_view.html
+++ b/src/doctor_schedule_view.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor Profile</title>
     <link href="./css/profiles.css" rel="stylesheet"/>
+    <link href="./css/schedule.css" rel="stylesheet"/>
 </head>
 <body>
     <h1>Doctor Profile</h1>
@@ -16,7 +17,6 @@
         <p><strong>Specialty:</strong> <span id="specialty"></span></p>
     </div>
 </div>
-<div class="add-availabiity"><div class="center-btn">Add Available Slot</div></div>
     <script>
         // Get query parameters from the URL
         const urlParams = new URLSearchParams(window.location.search);
