--- a/src/doctors_list.html
+++ b/src/doctors_list.html
@@ -3,16 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registered Doctors</title>
+    <title>Doctors List</title>
 </head>
 <body>
-    <h1>Registered Doctors</h1>
-    <div id="doctorsList"></div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/truffle-contract.js"></script>
-    <script src="js/app.js"></script>
+<h1>Doctors List</h1>
+
+<table id="doctorsTable" border="1">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Specialty</th>
+            <th>Schedule</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!-- Data will be dynamically added here -->
+    </tbody>
+</table>
+
+<script>
+    // Fetch data from the API
+    fetch('http://127.0.0.1:8000/api/doctors')
+        .then(response => response.json())
+        .then(data => {
+            const doctorsTable = document.getElementById('doctorsTable');
+            const tbody = doctorsTable.getElementsByTagName('tbody')[0];
+
+            // Loop through the data and add rows to the table
+            data.forEach(doctor => {
+                const row = tbody.insertRow();
+                const nameCell = row.insertCell(0);
+                const specialtyCell = row.insertCell(1);
+                const linkCell = row.insertCell(2);
+
+                nameCell.textContent = doctor.name;
+                specialtyCell.textContent = doctor.specialty;
+                linkCell.innerHTML = `<a href="http://127.0.0.1:3000/doctor_schedule_view.html?account=${doctor.wallet_address}&name=${doctor.name}&specialty=${doctor.specialty}">Schedule</a>`
+
+            });
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+        });
+</script>
+
 </body>
 </html>
