--- a/src/doctor_schedule_view.html
+++ b/src/doctor_schedule_view.html
@@ -6,36 +6,82 @@
     <title>Doctor Profile</title>
     <link href="./css/profiles.css" rel="stylesheet"/>
     <link href="./css/schedule.css" rel="stylesheet"/>
+    <link href="./css/tables.css" rel="stylesheet"/>
 </head>
 <body>
     <h1>Doctor Profile</h1>
     <div class="profile-background">
-    <div class="profile-info">
-        <h2>Profile Information</h2>
-        <p><strong>Account:</strong> <span id="account"></span></p>
-        <p><strong>Name:</strong> <span id="name"></span></p>
-        <p><strong>Specialty:</strong> <span id="specialty"></span></p>
+        <div class="profile-info">
+            <h2>Profile Information</h2>
+            <p><strong>Account:</strong> <span id="account"></span></p>
+            <p><strong>Name:</strong> <span id="name"></span></p>
+            <p><strong>Specialty:</strong> <span id="specialty"></span></p>
+        </div>
     </div>
-</div>
+
+<!-- Table for available appointment slots -->
+<h1>Available Appointment Slots</h1>
+<table id="appointmentSlots">
+    <thead>
+        <tr>
+            <th>Date</th>
+            <th>Time</th>
+            <th>Book Slot</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!-- Data will be dynamically added here -->
+    </tbody>
+</table>
+
     <script>
         // Get query parameters from the URL
         const urlParams = new URLSearchParams(window.location.search);
         const account = urlParams.get('account');
         const name = urlParams.get('name'); // Updated to 'name' instead of 'doctorname'
         const specialty = urlParams.get('specialty');
-    
+
         // Display query parameter values in the HTML elements
         document.getElementById('account').textContent = account;
         document.getElementById('name').textContent = name;
         document.getElementById('specialty').textContent = specialty;
-    </script>
+        
 
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/web3.min.js"></script>
-        <script src="js/truffle-contract.js"></script>
-        <script src="js/app.js"></script>
+        // Function to display available appointment slots
+        function displayAppointmentSlots(slots) {
+            const appointmentSlots = document.getElementById('appointmentSlots').getElementsByTagName('tbody')[0];
+            appointmentSlots.innerHTML = '';
+
+            slots.forEach(slot => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${slot.date}</td>
+                    <td>${slot.startTime}</td>
+                    <td><button class="center-btn" onclick="bookSlot(${slot.id})">Book Slot</button></td>
+                `;
+                appointmentSlots.appendChild(row);
+            });
+        }
+
+        const id = urlParams.get('id');
+        fetch(`http://127.0.0.1:8000/api/appointments/available/${id}`)
+            .then(response => response.json())
+            .then(slots => {
+                // Display appointment slots
+                displayAppointmentSlots(slots);
+            })
+            .catch(error => {
+                console.error('Error fetching appointment slots:', error);
+                alert('Error fetching appointment slots:', error);
+        });
+        </script>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/web3.min.js"></script>
+    <script src="js/truffle-contract.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
