--- a/src/doctor_schedule_view.html
+++ b/src/doctor_schedule_view.html
@@ -66,7 +66,7 @@
                     <td>${slot.date}</td>
                     <td>${slot.startTime}</td>
                     <td>
-                        <button class="center-btn" onclick="App.bookAppointment(${slot.date}, '${slot.startTime}', ${id})">Book Slot</button>
+                        <button class="center-btn" onclick="App.bookAppointment(${slot.date}, '${slot.startTime}', ${slot.id})">Book Slot</button>
                     </td>
                 `;
                 if (slot.booked) {
